@@ -8,7 +8,6 @@
         <groupId>io.teaql</groupId>
         <artifactId>teaql-java-parent</artifactId>
         <version>1.198-RELEASE</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>teaql-mysql</artifactId>
@@ -18,7 +17,55 @@
     <dependencies>
         <dependency>
             <groupId>io.teaql</groupId>
-            <artifactId>teaql-sql</artifactId>
+            <artifactId>teaql-data-service-sql</artifactId>
+        </dependency>
+        
+        <!-- JUnit for Testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mysql</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.teaql</groupId>
+            <artifactId>teaql-provider-jdbc</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.teaql</groupId>
+            <artifactId>teaql-utils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.teaql</groupId>
+            <artifactId>teaql-runtime</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-reads io.teaql.mysql=io.teaql.runtime
+                        --add-opens io.teaql.mysql/io.teaql.mysql=io.teaql.utils
+                        --add-opens io.teaql.core/io.teaql.core=io.teaql.utils
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
